--- a/ClinicManagementSystem Solution/ClinicManagementSystem/ClinicManagementSystem.PL.csproj
+++ b/ClinicManagementSystem Solution/ClinicManagementSystem/ClinicManagementSystem.PL.csproj
@@ -19,4 +19,7 @@
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="wwwroot\img\" />
+  </ItemGroup>
 </Project>
